Revision history for Acme-CPANAuthors-CPAN-OneHundred
=====================================================

        - fixed license fields in META.json to be lists.

1.03    2014-06-26
        [New Authors]
        - BARBIE

        [Updated Counts]
        - SHARYANTO, TOBYINK, INGY, ETHER, KENTNL, PEVANS, SALVA

1.02    2014-06-07
        - fix path to GitHub repo.
        - backup previous list (in the event we need to rerun).
        - reworked ordering of lists.

        [Updated Counts]
        - SHARYANTO, TOBYINK, DAGOLDEN, ETHER, DROLSKY, KENTNL

1.01    2014-06-01
        - #96117 - documentation fixes. (Thanks to Toby Inkster).

1.00    2014-05-31
        - First version.